--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "yarn jest --coverage --silent --no-watchman",
     "test-with-debug": "yarn jest --coverage --silent --no-colors --no-watchman --detectOpenHandles --forceExit",
     "prebuild": "rm -rf dist",
-    "build": "esbuild src/*.ts --bundle --minify --platform=node --target=es2020 --outdir=dist"
+    "build": "esbuild src/*.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outdir=dist"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/LCVista/devops-pr-deployer#readme",
   "dependencies": {
-    "@actions/core": "^1.6.0",
+    "@actions/core": "^1.10.0",
     "@actions/github": "^5.0.0",
     "@octokit/core": "^3.5.1",
     "redis": "^4.2.0"
