--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,14 @@ inputs:
   redis_key:
     description: 'Which key to retrieve'
     required: true
+  limit:
+    description: 'Max number of results'
+    required: false
+    default: '255'
+  page:
+    description: 'Which page of results'
+    required: false
+    default: '1'
 outputs:
   list:
     description: "The set of files in this partition"
@@ -28,6 +36,8 @@ runs:
       env:
         redis_endpoint: ${{ inputs.redis_endpoint }}
         redis_key: ${{ inputs.redis_key }}
+        limit: ${{ inputs.limit }}
+        page: ${{ inputs.page }}
 
 branding:
   icon: 'target'
