Adding buckets to keylist in order to fit within github limits

--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
     description: 'Which page of results'
     required: false
     default: '1'
+  make_groups_not_pages:
+    description: 'Whether to make groups instead of pagination'
+    required: false
+    default: 'false'
 outputs:
   list:
     description: "The set of files in this partition"
